Implement Main Activity and Top Headlines Activity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,15 +4,67 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".ui.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
+    <Button
+        android:id="@+id/topHeadlines"
+        android:layout_width="275dp"
+        android:layout_height="100dp"
+        android:text="@string/top"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toTopOf="@id/newsSrc"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+    </Button>
+
+    <Button
+        android:id="@+id/newsSrc"
+        android:layout_width="275dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="152dp"
+        android:text="@string/sources"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toTopOf="@id/countries"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/topHeadlines">
+    </Button>
+
+    <Button
+        android:id="@+id/countries"
+        android:layout_width="275dp"
+        android:layout_height="100dp"
+        android:text="@string/countries"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/lang"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/newsSrc">
+    </Button>
+
+    <Button
+        android:id="@+id/lang"
+        android:layout_width="275dp"
+        android:layout_height="100dp"
+        android:text="@string/lang"
+        android:textSize="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/countries"
+        app:layout_constraintBottom_toTopOf="@id/search">
+    </Button>
+
+    <Button
+        android:id="@+id/search"
+        android:layout_width="275dp"
+        android:layout_height="100dp"
+        android:text="@string/search"
+        android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/lang">
+    </Button>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
